# ChangeLog for net-analyzer/driftnet
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/driftnet/ChangeLog,v 1.43 2014/01/06 02:21:09 steev Exp $

  06 Jan 2014; Steev Klimaszewski <steev@gentoo.org>
  driftnet-0.1.6_p20090401.ebuild:
  Fix driftnet to build with the latest stable libpng, update eapi

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> driftnet-0.1.6-r4.ebuild,
  driftnet-0.1.6_p20090401.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  23 Apr 2012; Michał Górny <mgorny@gentoo.org>
  driftnet-0.1.6_p20090401.ebuild:
  Use mirror:// in SRC_URI.

  24 Nov 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #158470

  28 Mar 2011; Tim Harder <radhermit@gentoo.org> driftnet-0.1.6-r4.ebuild,
  driftnet-0.1.6_p20090401.ebuild:
  Use slot deps for gtk+.

  26 Feb 2011; Kevin McCarthy <signals@gentoo.org> driftnet-0.1.6-r4.ebuild,
  driftnet-0.1.6_p20090401.ebuild:
  Updated depends from media-libs/jpeg to virtual/jpeg

  11 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  driftnet-0.1.6_p20090401.ebuild:
  Fix building with libpng14.

  27 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  driftnet-0.1.6-r4.ebuild:
  Remove bindnow-flags wrt #226935.

*driftnet-0.1.6_p20090401 (25 Apr 2009)

  25 Apr 2009; Robert Buchholz <rbu@gentoo.org> metadata.xml,
  +driftnet-0.1.6_p20090401.ebuild:
  Bump to a forked bugfix release, fixes bug #257717 (driftnet does not display
  any pictures). Remove bindnow-flags (bug #226985 by Diego E. 'Flameeyes'
  Pettenò).

  16 May 2008; nixnut <nixnut@gentoo.org> driftnet-0.1.6-r4.ebuild:
  Stable on ppc wrt bug 222289

  15 May 2008; Markus Meier <maekke@gentoo.org> driftnet-0.1.6-r4.ebuild:
  x86 stable, bug #222289

*driftnet-0.1.6-r4 (16 Feb 2008)

  16 Feb 2008; Steev Klimaszewski <steev@gentoo.org>
  +driftnet-0.1.6-r4.ebuild:
  New patch from Debian, fixes compile issues.  Going to unmask -r4.
