@@ -10,4 +10,4 @@ RDEPEND=net-libs/libpcap gtk? ( x11-libs/gtk+:2 virtual/jpeg media-libs/giflib m
 SLOT=0
 SRC_URI=mirror://github/rbu/driftnet/driftnet-0.1.6_p20090401.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	32bd61b45c2f57e468b4ee7311fec8f5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=9fad367c5a1f7ea0b0db21d0cc8fe439
+_md5_=f5f154bb959a096253aa0cbe760fdabd
