@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST driftnet-0.1.6_p20090401.tar.gz 43683 SHA256 6ed5d66ddc219a9e98a3879aa1317a9437dc7fc97b7a2bf538a0cb8bb32f4dca SHA512 93b2f7b644603bf2fea09163c3c8cc6eed7ed61f3ad7f6770a754e1a31afde5a75e27464c399261bfdafbe37729f201e6bbcb06bb6c59bf52ac0ede4393a15fa WHIRLPOOL 2523114d08ee789cf0194fafb3cf1886b1173d1106091cd73973f9a213656a94fa721ef08c1037d1f5efa488caa79c936df527e9463414445ea8c0c4a87333a7
 DIST driftnet_0.1.6-8.diff.gz 6343 SHA256 16b2ad387d3a06f2a00699b66e99de4b9c4a8636127d303d1f148862a1d65215
 DIST driftnet_0.1.6.orig.tar.gz 36700 SHA256 d3cb92ce27e36c3bd7225f01e893f51a6deb04ad3235d79f5e92e17941d7511b
 EBUILD driftnet-0.1.6-r4.ebuild 1695 SHA256 492df8cddb742a339fe4384dc4b7ee555e7dfaf8157c39f621635a211e265536 SHA512 f4e9f870e0d77a0842a98b01a9322f06f8895eb217205f3593971bbffa31711b7f653bd9fb9453d4591588c88ff99b4f7fd2e9f31c041677404bb1ff00377087 WHIRLPOOL 7a67b30c473f4b3b37198850811ca167c41d5124458d1e48a248b971a4cef1c6942bd0b1b62c13959eb42416e2b277e107dac678ad9255f0e9943d5a63fe17cd
-EBUILD driftnet-0.1.6_p20090401.ebuild 1773 SHA256 69b4a425d2b68e40d98ede1a1d7e3a9b959608bdff52d880a60f66dc71e289b4 SHA512 b4555cc2f70dc1d6cd4e07d1398e660196b645095f7fb07d92639eb611f27a65c49d51a11adb3f7d4074c3d1094b917fcebd3075687eb592910529b33b97164f WHIRLPOOL 029e7e7c9cbc68c4082d13585e979af2aa9873fecdf801d055fd96f50aca95bfda11314fe052928f8a3cb6cd28c29c1e1343d035086037586a4832a8dc930c35
-MISC ChangeLog 5758 SHA256 0b93fcbe092fe3934956d9bf2378909750593f44fec28fbb326819a70aa46d7e SHA512 bc7bcfadee4d5afd0d32e9cbc941b68ec84cb48b179b8833e4a4cbfbcfc461adde697ee0f17fe1bd3af1f7909a3984edbe11f3e99b75c7e9c0fd7c9b3e7c377a WHIRLPOOL 543c4485db190dbd26f85cf1f3d9ca9579beceb5b9fae4ac566cee207796e7bec7b239b8604c6f55074867f108b7df9a1a741a772ce94a78ab5bc61df2bd571e
+EBUILD driftnet-0.1.6_p20090401.ebuild 1623 SHA256 839f10096556adf5b3a50c99f50a5199b25045178261a662487f927b77f505ae SHA512 c6a1ec0fa5fba5fd199947659f3045b2d16cfc73f4d525604bd8a769689782dc42fd05634d817c6d9de3ea80d9b0e9926f6c09bcd348cd275cddbd8f26f6c7d0 WHIRLPOOL 51d6685b01a204f2e24b6fcbf63a6d7771bd4dbb717a0cc5d60023ec0c6da5f6658d7b3d9eaf0a89271e949efe7ff5b058eed6417c29b71a92f801f4f159e0ea
+MISC ChangeLog 5882 SHA256 a9c704ea9a5f5ea69bc1a373d48ca61a0fda777c20d3e55f240d70e7ff84d590 SHA512 ed3d41936e7bade3f231d571eac70d17996c78ed951ae1721c92b489a16096e7f4b4304e2f2b400e417ce53d20d85a67b827773d0196c7f165118f37647d9042 WHIRLPOOL 679ee7abc69779ec3492ad78dca5aa666bc279720248628e0a89f1d45156da720c7d3bb512b364301b410c02df130cf621cdd85a64d346454683ca796f112733
 MISC metadata.xml 287 SHA256 0132f6f9154547c2766f5ad9598aeed4c9ddddd70acf9ba1b333dda556a2f994 SHA512 3accb56aa14af50af1b2835662e4e3c6cf203e060722b277421f1bf0678b900201a566c92186031e1976b74e26093306fee245967db9eb7b63a57aa58c14705f WHIRLPOOL 0cb46a4fc7f7661ce9f47ba3099c8ccb7caf335b78e23ab0a46cdb77b9e3d50e5b7fe80001f814201b396f03366b159ca192449f63461635cf88f4133744b1f1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlOxjA0ACgkQVWmRsqeSphM/DwCfUh6SZHc92bwJFpKmFNGHrb4j
+bEMAoIAKpytBWgJgRQ6oeeBeE52GIea4
+=jQ/Y
+-----END PGP SIGNATURE-----
